# antlr-rust-runtime

./: .clippy.toml  .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  codecov.yml  release-please-config.json  rust-toolchain.toml
.codex/: config.toml
.codex/environments/: environment.toml
.conformance-review/: Rust.test.stg  Rust.test.stg.design-notes.md  rust-test-stg-honest-reference-gap.md
.github/workflows/: antlr-runtime-testsuite.yml  ci.yml  claude-code-review.yml  commitlint.yml  cpd.yml  javascript-parity.yml  kotlin-parity.yml  parse-bench.yml  publish.yml  release-please.yml  typescript-parity.yml
docs/: honest-action-transpiler-plan-concerns.md  honest-action-transpiler-plan.md  issue-141-direct-g4-codegen-plan.md  issue-63-javascript-target-actions-plan.md  issue-78-lexer-benchmark.md  issue-80-lexer-range-benchmark.md  issue-81-token-set-benchmark.md  issue-86-dfa-benchmark.md  issue-87-parser-atn-benchmark.md  issue-9-semantic-predicates-actions-design.md  javascript-build.md  kotlin-build.md  migration.md  perf-issue-15-csharp-gap-plan.md  requirements.md  runtime-testsuite.md  typescript-build.md
patterns/: csharp.toml  javascript.toml
src/: byte_stream.rs  char_stream.rs  dfa.rs  errors.rs  generated.rs  int_stream.rs  lexer.rs  lib.rs  parser.rs  perf.rs  prediction.rs  recognizer.rs  semir.rs  token.rs  token_stream.rs  tree.rs  vocabulary.rs  xpath.rs
src/atn/: ascii_range.rs  lexer.rs  lexer_dfa.rs  mod.rs  parser.rs  parser_atn.rs  serialized.rs
src/bin_support/: embedded.rs  rust_names.rs  templates.rs
src/snapshots/: antlr4_runtime__parser__tests__deferred_alternatives_preserve_left_recursive_contexts.snap  antlr4_runtime__parser__tests__fast_recognizer_preserves_labeled_left_recursive_operator_context.snap  antlr4_runtime__parser__tests__folds_left_recursive_boundary_into_rule_node.snap  antlr4_runtime__parser__tests__generated_prediction_diagnostics_use_adaptive_context.snap  antlr4_runtime__parser__tests__parsed_file_exposes_all_buffered_tokens.snap  antlr4_runtime__parser__tests__parser_dispatches_recovery_diagnostics_through_registered_listeners.snap  antlr4_runtime__parser__tests__private_context_alt_tracking_keeps_fast_predicate_recognition.snap  antlr4_runtime__recognizer__tests__recognizers_replace_the_default_console_error_listener.snap  antlr4_runtime__vocabulary__tests__upstream_vocabulary__vocabulary_from_token_names_matches_java.snap  antlr4_runtime__xpath__tests__lexer_and_parser_edge_cases.snap  antlr4_runtime__xpath__tests__named_anywhere_inversion_matches_java_4_13_2.snap  antlr4_runtime__xpath__tests__upstream_invalid_paths.snap  antlr4_runtime__xpath__tests__upstream_valid_paths.snap  antlr4_runtime__xpath__tests__wildcard_anywhere_virtual_root.snap
src/xpath/: XPathLexer.g4
tests/: antlr4_rust_gen_cli.rs
tests/codegen-direct/: approved-differences.json  external-fixture-map.json  external-source-inventory.json  frontend-corpus.json  frontend-snapshots.tsv  upstream-case-inventory.json  upstream-test-map.json
tests/javascript-parity/: README.md  dump_python.py  run.sh
tests/kotlin-parity/: README.md  dump_python.py  run.sh
tests/typescript-parity/: README.md  TypeScriptParityDumper.java  run.sh
tool/: README.md
tools/grammar-frontend/: evidence-common.mjs  generate-atn-construction-fixtures.mjs  generate-attribute-checks-fixtures.mjs  generate-composite-grammars-fixtures.mjs  generate-general-bug-fixtures.mjs  generate-left-recursion-tool-issue-fixtures.mjs  generate-lookahead-tree-fixtures.mjs  generate-phase-c-runtime-fixtures.mjs  generate-port-evidence.mjs  generate-symbol-issues-fixtures.mjs  generate-token-type-assignment-fixtures.mjs  generate-tool-syntax-errors-fixtures.mjs  generate-unicode-data.mjs  generate-unicode-decomposition-data.mjs  generate-upstream-test-map.mjs  inventory-upstream-tests.mjs  read-junit-report.py  snapshot-frontend.mjs  update-interp-fixtures.mjs  update-interp-fixtures.sh  update-stage0.sh  update-vscode-antlr4-fixtures.mjs  validate-external-fixture-map.mjs  validate-interp-fixtures.mjs  (+3 more)
(+3368 files in other folders)
